location search scroll issue and footer distort issue fixed

--- a/dev/css/layout.css
+++ b/dev/css/layout.css
@@ -143,7 +143,7 @@ html,
 body {
     height: auto;
     position: relative;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 body {
